[package]
name = "checkpwn"
version = "0.3.9"
authors = ["brycx <brycx@protonmail.com>"]
description = "Check Have I Been Pwned and see if it's time for you to change passwords."
keywords = [ "cli", "password", "security", "HIBP" ]
categories = [ "command-line-utilities" ]
readme = "README.md"
repository = "https://github.com/brycx/checkpwn"
license = "MIT"

[dependencies]
colored = "2.0"
sha-1 = { version = "0.9.1", default-features = false }
hex = "0.4.2"
reqwest = { version = "0.10.4", features = ["blocking"] }
rpassword = "5.0.0"
zeroize = "1.1.0"
dirs = "3.0.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_yaml = "0.8.11"

[dev-dependencies]
assert_cmd = "1.0.1"
