[package]
name = "checkpwn"
version = "0.5.2"
authors = ["brycx <brycx@protonmail.com>"]
description = "Check Have I Been Pwned and see if it's time for you to change passwords."
keywords = [ "cli", "password", "security", "HIBP" ]
categories = [ "command-line-utilities" ]
readme = "README.md"
edition = "2018"
repository = "https://github.com/brycx/checkpwn"
license = "MIT"

[dependencies]
colored = "2.0"
rpassword = "5.0.0"
zeroize = "1.1.0"
dirs-next = "2.0.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_yaml = "0.8.11"
checkpwn_lib = "0.1.1"
anyhow = "1.0.33"

[dev-dependencies]
assert_cmd = "1.0.1"
