[package]
name = "checkpwn"
version = "0.6.0"
authors = ["brycx <brycx@protonmail.com>"]
description = "Check Have I Been Pwned and see if it's time for you to change passwords."
keywords = [ "cli", "password", "security", "HIBP" ]
categories = [ "command-line-utilities" ]
readme = "README.md"
edition = "2024"
repository = "https://github.com/brycx/checkpwn"
license = "MIT"

[dependencies]
colored = "3"
rpassword = "7"
zeroize = "1"
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.13"
checkpwn_lib = "0.3.0"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
rand = "0.10"
